@@ -1,5 +1,8 @@
 2012-04-08  Bob Halley  <halley@dnspython.org>
 
+	* dns/message.py (make_query): All EDNS values may now be
+	  specified when calling make_query()
+
 	* dns/query.py: Specifying source_port had no effect if source was
 	  not specified.  We now use the appropriate wildcard source in
 	  that case.
